[gd_scene load_steps=20 format=3 uid="uid://bt83knt6kftpk"]

[ext_resource type="Script" path="res://presents.gd" id="1_nw2pq"]
[ext_resource type="FontFile" uid="uid://oxuroxbxnss" path="res://Etc/Fonts/Minecraft Rus NEW.otf" id="2_v3vkf"]
[ext_resource type="AudioStream" uid="uid://cj315mv6ch3p5" path="res://Music/UspetDoPari.mp3" id="3_6b7d4"]
[ext_resource type="Texture2D" uid="uid://4f3c8612lihm" path="res://STM_LOGO-Sheet.png" id="4_scgcf"]
[ext_resource type="Texture2D" uid="uid://bf7umaflwtwhk" path="res://Etc/DISCLAIMER_ALERT.jpg" id="5_t5hwg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e0n83"]
atlas = ExtResource("4_scgcf")
region = Rect2(0, 0, 198, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jswm"]
atlas = ExtResource("4_scgcf")
region = Rect2(198, 0, 198, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_4slnx"]
atlas = ExtResource("4_scgcf")
region = Rect2(396, 0, 198, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7r1q"]
atlas = ExtResource("4_scgcf")
region = Rect2(594, 0, 198, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_msorc"]
atlas = ExtResource("4_scgcf")
region = Rect2(792, 0, 198, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_io7xp"]
atlas = ExtResource("4_scgcf")
region = Rect2(990, 0, 198, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_6l04q"]
atlas = ExtResource("4_scgcf")
region = Rect2(1188, 0, 198, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_3clir"]
atlas = ExtResource("4_scgcf")
region = Rect2(1386, 0, 198, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd26e"]
atlas = ExtResource("4_scgcf")
region = Rect2(1584, 0, 198, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_otx7t"]
atlas = ExtResource("4_scgcf")
region = Rect2(1782, 0, 198, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_sca7k"]
atlas = ExtResource("4_scgcf")
region = Rect2(1980, 0, 198, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt4nk"]
atlas = ExtResource("4_scgcf")
region = Rect2(2178, 0, 198, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp3wx"]
atlas = ExtResource("4_scgcf")
region = Rect2(2376, 0, 198, 66)

[sub_resource type="SpriteFrames" id="SpriteFrames_feid8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0n83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jswm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4slnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7r1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msorc")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_io7xp")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_6l04q")
}, {
"duration": 1.1,
"texture": SubResource("AtlasTexture_3clir")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_hd26e")
}, {
"duration": 1.1,
"texture": SubResource("AtlasTexture_otx7t")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_sca7k")
}, {
"duration": 1.1,
"texture": SubResource("AtlasTexture_gt4nk")
}, {
"duration": 1.4,
"texture": SubResource("AtlasTexture_fp3wx")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_nw2pq")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(0, 17)

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = -440.0
offset_top = -236.0
offset_right = 450.0
offset_bottom = 251.0
theme_override_fonts/font = ExtResource("2_v3vkf")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="Label" type="Label" parent="Label"]
texture_filter = 1
layout_mode = 0
offset_left = 23.0
offset_top = 257.0
offset_right = 869.0
offset_bottom = 486.0
theme_override_fonts/font = ExtResource("2_v3vkf")
theme_override_font_sizes/font_size = 42
horizontal_alignment = 1

[node name="Music" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("3_6b7d4")
volume_db = -2.05

[node name="Label2" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
offset_left = 113.0
offset_top = 147.0
offset_right = 538.0
offset_bottom = 215.0
rotation = -0.406662
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.27451, 0.509804, 0.784314, 1)
theme_override_fonts/font = ExtResource("2_v3vkf")
theme_override_font_sizes/font_size = 44
text = "PRESENTS!"
horizontal_alignment = 1

[node name="STM" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -100)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_feid8")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
color = Color(0, 0, 0, 1)

[node name="Label3" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
offset_left = -608.0
offset_top = -152.0
offset_right = 640.0
offset_bottom = 461.0
theme_override_fonts/font = ExtResource("2_v3vkf")
theme_override_font_sizes/font_size = 36
text = "DISCLAIMER: DEADLY CRINGE ALERT !

Игра не предназначена для слабонервных 
беременных женщин детей эпилептиков. Если
у вас наблюдались ранее призраки кринжического 
приступа, немедленно включите игру и продолжайте
играть."
horizontal_alignment = 1

[node name="Alert1" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
position = Vector2(465, -142)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_t5hwg")

[node name="Label4" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
offset_left = -640.0
offset_top = -184.0
offset_right = 639.0
offset_bottom = 135.0
theme_override_fonts/font = ExtResource("2_v3vkf")
theme_override_font_sizes/font_size = 42
text = "ОТКАЗ ОТ ОТВЕТСТВЕННОСТИ: 
МЫ НИЧЕГО ВАМ НЕ СДЕЛАЛИ

Все персонажи игры - вымышлены, 
все совпадения случайны и не относятся к 
реальности, любым другим вселенным и 
вашему воображению. Спасибо за понимание."
horizontal_alignment = 1

[node name="Alert2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
position = Vector2(-465, -142)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_t5hwg")

[node name="Button" type="Button" parent="."]
texture_filter = 1
offset_left = -626.0
offset_top = -327.0
offset_right = -417.0
offset_bottom = -268.0
theme_override_fonts/font = ExtResource("2_v3vkf")
theme_override_font_sizes/font_size = 29
text = "Скип интро"

[connection signal="animation_finished" from="STM" to="." method="_on_stm_animation_finished"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
